[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where =["Lib"]

[project]
name = "notobuilder"
dynamic = ["version"]
description = "A build system for Noto fonts"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Simon Cozens", email = "simon@simon-cozens.org" },
]
dependencies = [
	"fonttools>=4.51.0, != 4.52.1, != 4.52.2, != 4.52.3, != 4.52.4",
	"ufomerge>=1.6.1",
	"fontmake>=3.3",
	"glyphsLib>=6.0.7",
	"ttfautohint-py",
	"ufo2ft>=2.27.0",
	"gftools @ git+https://github.com/googlefonts/gftools@main",
	"diffenator2>=0.2.12",
    "chevron>=0.10.0",
    "sh>=1.14.1",
]
